--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bootstrap": "^5.1.3",
     "ngx-bootstrap": "^8.0.0",
     "rxjs": "~7.4.0",
+    "tailwindcss": "^3.0.24",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
@@ -36,6 +37,7 @@
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "postcss": "^8.4.12",
     "typescript": "~4.5.2"
   }
 }
